[gd_scene load_steps=40 format=3 uid="uid://b6dqse6cgfv6p"]

[ext_resource type="Script" uid="uid://cg45a0r6ybrmq" path="res://Scipt/enemy.gd" id="1_n6qjc"]
[ext_resource type="Texture2D" uid="uid://dqhrfylm5wjnt" path="res://Assets/Enemy_Animations_Set/enemies-vampire_attack.png" id="1_s685e"]
[ext_resource type="Texture2D" uid="uid://2awthupgdme4" path="res://Assets/Enemy_Animations_Set/enemies-vampire_idle.png" id="2_n6qjc"]
[ext_resource type="Texture2D" uid="uid://bdp1n74gilr0o" path="res://Assets/Enemy_Animations_Set/enemies-vampire_movement.png" id="3_vmi60"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hti8k"]
atlas = ExtResource("1_s685e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_44hyy"]
atlas = ExtResource("1_s685e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qcj2"]
atlas = ExtResource("1_s685e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5op34"]
atlas = ExtResource("1_s685e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6llc"]
atlas = ExtResource("1_s685e")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00taw"]
atlas = ExtResource("1_s685e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgux2"]
atlas = ExtResource("1_s685e")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ffy"]
atlas = ExtResource("1_s685e")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jr7y"]
atlas = ExtResource("1_s685e")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myw4n"]
atlas = ExtResource("1_s685e")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iepwm"]
atlas = ExtResource("1_s685e")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c152g"]
atlas = ExtResource("1_s685e")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksyog"]
atlas = ExtResource("1_s685e")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq5ds"]
atlas = ExtResource("1_s685e")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dgtb"]
atlas = ExtResource("1_s685e")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5edp"]
atlas = ExtResource("1_s685e")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuh02"]
atlas = ExtResource("2_n6qjc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fv4m"]
atlas = ExtResource("2_n6qjc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivm4r"]
atlas = ExtResource("2_n6qjc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bc13"]
atlas = ExtResource("2_n6qjc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwgcx"]
atlas = ExtResource("2_n6qjc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flpbe"]
atlas = ExtResource("2_n6qjc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqemj"]
atlas = ExtResource("3_vmi60")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxni4"]
atlas = ExtResource("3_vmi60")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fed0q"]
atlas = ExtResource("3_vmi60")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ftp3"]
atlas = ExtResource("3_vmi60")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cksk"]
atlas = ExtResource("3_vmi60")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptonk"]
atlas = ExtResource("3_vmi60")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0grh"]
atlas = ExtResource("3_vmi60")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha7dg"]
atlas = ExtResource("3_vmi60")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyx0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hti8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44hyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qcj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5op34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6llc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00taw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgux2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ffy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jr7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myw4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iepwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c152g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksyog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq5ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dgtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5edp")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuh02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fv4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivm4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bc13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwgcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flpbe")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqemj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxni4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fed0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ftp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cksk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptonk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0grh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha7dg")
}],
"loop": true,
"name": &"Move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_opvym"]
radius = 4.0
height = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s685e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n6qjc"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vmi60"]
radius = 283.044

[node name="Enemy Body" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_n6qjc")

[node name="Enemy Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -2)
sprite_frames = SubResource("SpriteFrames_cyx0v")
animation = &"Attack"
autoplay = "Idle"
frame = 15
frame_progress = 1.0

[node name="Enemy Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_opvym")

[node name="Enemy Hitbox" type="Area2D" parent="."]
visible = false

[node name="E_Hitbox" type="CollisionShape2D" parent="Enemy Hitbox"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_s685e")

[node name="Enemy Attack" type="Area2D" parent="."]

[node name="E_Attack" type="CollisionShape2D" parent="Enemy Attack"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_n6qjc")

[node name="Enemy Aggro Range" type="Area2D" parent="."]
visible = false

[node name="Aggro_range" type="CollisionShape2D" parent="Enemy Aggro Range"]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_vmi60")

[node name="Attack Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="Enemy Sprite" to="." method="_on_enemy_sprite_animation_finished"]
[connection signal="body_entered" from="Enemy Attack" to="." method="_on_enemy_attack_body_entered"]
[connection signal="body_exited" from="Enemy Attack" to="." method="_on_enemy_attack_body_exited"]
[connection signal="body_entered" from="Enemy Aggro Range" to="." method="_on_enemy_aggro_range_body_entered"]
[connection signal="body_exited" from="Enemy Aggro Range" to="." method="_on_enemy_aggro_range_body_exited"]
[connection signal="timeout" from="Attack Timer" to="." method="_on_attack_timer_timeout"]
